# one-day

./: .gitignore  API.md  settings.gradle
buildSrc/: build.gradle
buildSrc/src/main/groovy/: java-common-conventions.gradle  spring-common-conventions.gradle
common/snowflake/: build.gradle
common/snowflake/src/main/java/jayho/common/snowflake/: Snowflake.java
data/: docker-compose.yaml
data/user-active-memory/: build.gradle
data/user-active-memory/src/main/java/jayho/oneday/config/: CacheConfig.java  CacheableKeyFormatGenerator.java  CacheableKeyFormatMapping.java
data/user-active-memory/src/main/java/jayho/oneday/repository/: ArticleLikeMemoryRepository.java  ArticleViewAbusingMemoryRepository.java  ViewMemoryRepository.java
data/user-active-mq/: build.gradle
data/user-active-mq/src/main/java/jayho/oneday/config/: KafkaConsumerConfig.java  KafkaProducerConfig.java  KafkaStreamConfig.java  MapperConfig.java  Test.java  TestDeserializer.java  TestSerializer.java
data/user-active-object/: build.gradle
data/user-active-rdb/: build.gradle
data/user-active-rdb/src/main/resources/: application.yml
server/ai-server/: build.gradle  pyproject.toml
server/ai-server/agent/: basic_agent.py  llm.py
server/ai-server/router/: app.py
server/ai-server/service/: aiservice.py
server/user-server/: build.gradle
server/user-server/src/main/java/jayho/oneday/: UserServerApplication.java
server/user-server/src/main/java/jayho/userserver/: UserServerApplication.java
server/user-server/src/main/resources/: application.yml
(+146 files in other folders)
