[tool.poetry]
name = "ai-server"
version = "0.1.0"
description = "ai-server"
package-mode = false

[tool.poetry.dependencies]
python = "3.11.9"
fastapi = "^0.116.0"
uvicorn = { extras = ["standard"], version = "^0.30.6" }
langchain = "^0.3.0"
langgraph = "0.6.4"
pydantic = "^2.0"
httpx = "^0.27.2"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
black = "^24.8.0"
isort = "^5.13.2"
mypy = "^1.11.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
